# zhlint-rs

./: Cargo.toml  README.md
src/: char_kind.rs  config.rs  cursor.rs  errors.rs  ignore.rs  lexer.rs  lib.rs  main.rs  nodes.rs  parser.rs
src/rules/: case_abbrs.rs  case_zh_units.rs  mod.rs  punctuation_unification.rs  punctuation_width.rs  space_bracket.rs  space_code.rs  space_hyper_mark.rs  space_letter.rs  space_letters.rs  space_punctuation.rs  space_quotation.rs  space_quote.rs  space_successive.rs  space_trim.rs
tests/: test_cases.rs  test_rules.rs
