[package]
name = "zh-formatter"
version = "0.1.0"
authors = ["st1020 <stone_1020@qq.com>"]
edition = "2021"
description = "A formatter tool for Chinese text content."
readme = "README.md"
repository = "https://github.com/st1020/zh-formatter"
license = "MIT OR Apache-2.0"
keywords = ["cli", "formatter", "chinese", "cjk", "markdown"]
categories = ["text-processing", "value-formatting", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
comrak = "0.19"
glob = "0.3"
itertools = "0.11"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.1"

[lib]
name = "zh_formatter"
path = "src/lib.rs"

[[bin]]
name = "zh-formatter"
path = "src/main.rs"
