[package]
name = "zhlint-rs"
version = "0.1.0"
authors = ["st1020 <stone_1020@qq.com>"]
edition = "2021"
description = "A formatter tool for Chinese text content."
readme = "README.md"
repository = "https://github.com/zhlint-project/zhlint-rs"
license = "MIT OR Apache-2.0"
keywords = ["cli", "formatter", "chinese", "cjk", "markdown"]
categories = ["text-processing", "value-formatting", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
icu_properties = "1.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
pulldown-cmark = "0.9.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8"

[features]
fancy = ["miette/fancy"]

[lib]
name = "zhlint"
path = "src/lib.rs"

[[bin]]
name = "zhlint"
path = "src/main.rs"
required-features = ["fancy"]
